--- a/web-apps/public/stylesheets/style.css
+++ b/web-apps/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #D3D3D3	
 }
 
 a {
